# CoopMultiRobotsPlanning

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  createScene.scr  query.txt  runCases.scr  runCases3.scr  runScriptCoop.scr  runScriptCoopCases.scr  runScriptPlanner.scr  runScripts.scr  sceneA.txt
data/case1/: case1.txt  ground.tmesh
data/case2/: case2.txt  ground.tmesh
data/case3/: case3.txt  ground.tmesh
data/sceneA/: ground.tmesh  sceneA.txt
data/sceneB/: ground.tmesh  sceneB.txt
data/sceneC/: ground.tmesh  sceneC.txt
scripts/sceneA/: runcoop_2.scr  runpEP.scr
scripts/sceneB/: runcoop_2.scr  runpEP.scr
scripts/sceneC/: runcoop_2.scr  runpEP.scr
src/Logic/: DFA.cpp  DFA.hpp  DFAIO.cpp  DFAIO.hpp  Formula.hpp  FormulaAnd.hpp  FormulaAtomic.hpp  FormulaComposed.hpp  FormulaFalse.hpp  FormulaIO.cpp  FormulaIO.hpp  FormulaIf.hpp  FormulaIff.hpp  FormulaNot.hpp  FormulaOr.hpp  FormulaTrue.hpp  FormulaXOr.hpp
src/MP/: Constants.hpp  MPAbstraction.cpp  MPAbstraction.hpp  MPBSimulator.cpp  MPBSimulator.hpp  MPBVehicleSimulator.cpp  MPBVehicleSimulator.hpp  MPCentralizedPlanner.cpp  MPCentralizedPlanner.hpp  MPCoopAStar.cpp  MPCoopAStar.hpp  MPCoopPlanner.cpp  MPCoopPlanner.hpp  MPCoordPlanner.cpp  MPCoordPlanner.hpp  MPDiscretePlanner.cpp  MPDiscretePlanner.hpp  MPEPlanner.cpp  MPEPlanner.hpp  MPFollowPlanner.cpp  MPFollowPlanner.hpp  MPMultiSearch.cpp  MPMultiSearch.hpp  MPPlanner.cpp  MPPlanner.hpp  MPPriorityPlanner.cpp  MPPriorityPlanner.hpp  MPPriorityPlannerRRT.cpp  MPPriorityPlannerRRT.hpp  MPPrmAbstraction.cpp  MPPrmAbstraction.hpp  MPProximityPlanner.hpp  MPPushAndSwap.cpp  MPPushAndSwap.hpp  MPRRT.cpp  MPRRT.hpp  MPRobotCar.cpp  MPRobotCar.hpp  MPSIPP.cpp  MPSIPP.hpp  (+10 more)
src/Programs/: GRunCentralizedPlanner.cpp  GRunCoopPlanner.cpp  GRunCoordPlanner.cpp  GRunDiscretePlanner.cpp  GRunEP.cpp  GRunEditor.cpp  GRunFollowPlanner.cpp  GRunPriorityPlanner.cpp  GRunPriorityRRTPlanner.cpp  GRunRRT.cpp  GRunScene.cpp  GRunSimulator.cpp  GenerateInstances.cpp  RunAbs.cpp  RunCentralizedPlanner.cpp  RunCoopPlanner.cpp  RunPriorityPlanner.cpp  RunPriorityRRTPlanner.cpp  Runner.cpp
src/Scenes/: CreateCase1.cpp  CreateCase2.cpp  CreateCase3.cpp  CreateScene.cpp  CreateScene.hpp  CreateSceneA.cpp  CreateSceneB.cpp  CreateSceneC.cpp  Scene.cpp  Scene.hpp  ground.tmesh
src/Utils/: Algebra.cpp  Algebra.hpp  Algebra2D.hpp  Algebra3D.cpp  Algebra3D.hpp  Allocator.hpp  BinarySearch.hpp  BnB.cpp  BnB.hpp  BnBcolored.cpp  BnBcolored.hpp  CCDInverseKinematics.cpp  CCDInverseKinematics.hpp  Colormap.cpp  Colormap.hpp  Constants.hpp  Curve.cpp  Curve.hpp  DLHandler.cpp  DLHandler.hpp  Defaults.hpp  Definitions.hpp  DisjointSet.cpp  DisjointSet.hpp  Flags.hpp  GCamera.cpp  GCamera.hpp  GDraw.cpp  GDraw.hpp  GManager.cpp  GManager.hpp  GMaterial.hpp  GTexture.cpp  GTexture.hpp  Geometry.cpp  Geometry.hpp  GraphSearch.hpp  Grid.cpp  Grid.hpp  HashFn.cpp  (+30 more)
stats/: LoadData.m  MyBar.m  MyBars.m  MyPlot.m  PlotInit.m  PlotLength.m  PlotLengthSearch.m  PlotTime.m  PlotTimeDistr.m  PlotTimeSearch.m  PrintResult.m  ReadResults.m  oldPlot.m  oldlength.m  plot0.m  plotTimeLength.m  plotdata.m  prinalldata.m
stats/case1/: res_Coop_0_0.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt
stats/case2/: res_Coop_0_0.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt
stats/case3/: res_Coop_0_0.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt
stats/sceneA/: res_Coop_0_0.txt  res_Coop_0_0_2.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_0_2.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt  res_Priority_0.txt  res_Priority_1.txt  res_cRRT_0.txt  res_cRRT_00.txt  res_cRRT_1.txt  res_pRRT_0.txt  res_pRRT_1.txt
stats/sceneB/: res_Coop_0_0.txt  res_Coop_0_0_2.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_0_2.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt  res_Priority_0.txt  res_Priority_1.txt  res_cRRT_0.txt  res_cRRT_1.txt  res_pRRT_0.txt  res_pRRT_1.txt
stats/sceneC/: res_Coop_0_0.txt  res_Coop_0_0_2.txt  res_Coop_0_10.txt  res_Coop_0_2.txt  res_Coop_0_5.txt  res_Coop_1_0.txt  res_Coop_1_0_2.txt  res_Coop_1_10.txt  res_Coop_1_2.txt  res_Coop_1_5.txt  res_Priority_0.txt  res_Priority_1.txt  res_cRRT_0.txt  res_cRRT_1.txt  res_pRRT_0.txt  res_pRRT_1.txt
textures/: Car.properties  PaloDuro.ppm  carbase.mtl  check1.ppm  dirt.ppm  dirt2.ppm  fabric2.ppm  fabric3.ppm  finish.ppm  grass.ppm  ground1.ppm  ground2.ppm  kot.ppm  runscript.scr  sand2.ppm  sand3.ppm  sand5.ppm  sand6.ppm  sand7.ppm  sand8.ppm  sand9.ppm  tiled_floor_diffuse.ppm  youbot_base.mtl
(+308 files in other folders)
